Fix label alignment

--- a/public/stylesheets/participant_search_form.css
+++ b/public/stylesheets/participant_search_form.css
@@ -14,8 +14,7 @@ div#participant_search label {
   width: 120px;
   cursor: pointer; }
   div#participant_search label.date {
-    width: auto;
-    margin: 0 20px 0 0; }
+    margin: 0 0px 0 0; }
 div#participant_search input[type=text], div#participant_search select {
   width: 275px;
   border: 1px solid #bbb; }
@@ -27,6 +26,7 @@ div#participant_search input[type=radio], div#participant_search input[type=chec
 div#participant_search dl.dates {
   margin: 0; }
 div#participant_search dl dt {
+  padding-top: 0px;
   float: left; }
   div#participant_search dl dt.radio {
     text-align: right; }
